Change Log for OpenResty

0.5.3 Nov 30 2008
* switched the license from GPLv2 to BSD.
* updated demo/Blog/script/init.pl to use the new column default value syntax.
* added the benchmark results for various configurations to the main POD.
* added the milestones and release plans to the main POD.

0.5.2 Nov 27 2008
* added support for the "unique" attribute of Model columns and updated the Admin site for it.
* rewrote the "default" attribute to support expressions and updated the Admin site for it.
* Bumped the version number of metamodel to 0.008 and we now no longer make use of the meta tables _models and _columns.
* now the -f option of the bin/openresty script supports absolute path and relative path of config files. No etc/ prefix assumed now.
* the proprietary YLogin API is mostly working.
* modify the default value of ACCOUNT_CMD_COUNT_LIMIT to 20.
* demo/Onccf - minor css fixes.
* added --- status section to t::OpenResty so as to test status code.
* skipped clkao++'s sanity check in http mode.

0.5.1 Nov 21 2008
* added support for builtin vars in the main url, as in
    GET /=/feed/Post/_user/agentzh.Public
  (xunxin)
* added the CompiledAction handler (currently for GET http commands only). (xunxin)
* now _callback and _var work with non-JSON data format as well.
* Model API
** use quasiquotes for function delete_records. (xunxin)
** added support for the Pg hstore column type.
** now we finally support _op = contains|le|ge|... correctly.
** now we support model columns of array types.
** started to stub out the prophet handler and model code (jesse)
* Version API
** fixed the revision inspection bug.
* Action API
** fixed the bug involved in params with unicode characters.
** fixed the bug involved in action call with param values of 0.
** added $_ROLE and $_ACCOUNT support.
** implemented HTTP forwarding to any sites in an action.
** added support for the frontend.allow_forwarding config option.
* View API
** added $_ROLE and $_ACCOUNT support.