@@ -119,7 +119,7 @@
         <li>handy personal or company database which can be accessed from anywhere on the web.</li>
     </ul>
     </div>
-    <p>OpenResty is <a href="http://search.cpan.org/dist/OpenResty">opensourced on CPAN</a> under a permissive <a href="http://opensource.org/licenses/artistic-license-2.0.php">Artistic 2 License</a>.</p>
+    <p>OpenResty is <a href="http://search.cpan.org/dist/OpenResty">opensourced on CPAN</a> under the BSD License.</p>
     <br/>
     <p>Join us via IRC on <code>#openresty</code> of <code>irc.freenode.net</code> ;)</p>
     </div>
