@@ -4,7 +4,7 @@ OpenResty::Spec::MetaModel - Metamodel for OpenResty backends
 
 =head1 VERSION
 
-This document describes OpenResty 0.5.2's meta model, version 0.008.
+This document describes OpenResty 0.5.3's meta model, version 0.008.
 
 =head1 DESCRIPTION
 
