@@ -5,6 +5,7 @@ Change Log for OpenResty
 * updated demo/Blog/script/init.pl to use the new column default value syntax.
 * added the benchmark results for various configurations to the main POD.
 * added the milestones and release plans to the main POD.
+* mentioned the #openresty IRC channel in the main POD.
 
 0.5.2 Nov 27 2008
 * added support for the "unique" attribute of Model columns and updated the Admin site for it.
